# CongresoAbierto

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci-coverage.yml  ci-unit-test.yml  docs.yml  gitflow-pr-rules.yml  lint.yml
backend/: README.md  __init__.py  __main__.py  api.py  cli.py  config.py  tracker.md
backend/api/: main.py  readme.md  requirements.txt
backend/core/: __init__.py  constants.py  enums.py  parsers.py
backend/database/: README.md  build_db.py  erd.py  models.py  orchestrator.py  raw_models.py  session.py
backend/documents/: __init__.py  downloader.py
backend/ocr/: README.md  __init__.py  classifier.py  pdf_pages.py  pipeline.py  repository.py  storage.py  types.py
data/: congresistas_2016_2021.json  congresistas_2021_2026.json  input_test.xlsx  seats.json
docs/: architecture.md  git-flow.md  tech-decisions.md
draft_notebooks/: descargaActas.ipynb  read_votes.ipynb  test_viz.ipynb
frontend/: app.js  graphic.css  graphic.html  index.html  script.js  script_download.js  script_header.js  script_table.js  seats_data.js  styles.css
tests/: conftest.py  test_models.py  test_raw_models.py  test_schema.py  test_scrape_congresistas.py  test_scrape_raw_bancadas.py  test_scrape_raw_bill_documents.py  test_scrape_raw_bills.py  test_scrape_raw_bills_documents.py  test_scrape_raw_committees.py  test_scrape_raw_congresistas.py  test_scrape_raw_motions.py  test_scrape_raw_motions_documents.py  test_scrape_utils.py  test_transformation_final.py
(+109 files in other folders)
