[project]
name = "estecon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.13",
    "altair>=5.5.0",
    "asyncio>=3.4.3",
    "cssselect>=1.3.0",
    "cv>=1.0.0",
    "duckdb>=1.3.2",
    "eralchemy>=1.5.0",
    "fitz>=0.0.1.dev2",
    "frontend>=0.0.3",
    "graphviz>=0.21",
    "httpx[http2]>=0.28.1",
    "ipykernel>=6.29.5",
    "ipython>=9.0.2",
    "jellyfish>=1.2.0",
    "loguru>=0.7.3",
    "lxml>=5.3.1",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "pathlib>=1.0.1",
    "polars>=1.30.0",
    "pre-commit>=4.2.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pymupdf>=1.25.5",
    "pytesseract>=0.3.13",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "respx>=0.22.0",
    "ruff>=0.12.0",
    "selenium>=4.33.0",
    "sqlalchemy>=2.0.41",
    "sqlalchemy-schemadisplay>=2.0",
    "typing>=3.10.0.0",
]
